SQONE-416 QA repairs: Increase default action contrast to pass a11y.

--- a/wp-content/themes/core/assets/css/src/theme/actions/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/actions/_mixins.pcss
@@ -27,7 +27,6 @@
 	/* CASE: Disabled */
 	&[disabled],
 	&.is-disabled {
-		opacity: 0.5;
 		cursor: default;
 	}
 }
@@ -52,11 +51,12 @@
 	/* CASE: Disabled */
 	&[disabled],
 	&.is-disabled {
+		background-color: var(--color-grey);
 
 		&:focus,
 		&:active,
 		&:hover {
-			background-color: var(--color-primary);
+			background-color: var(--color-grey);
 		}
 	}
 
@@ -89,6 +89,8 @@
 	/* CASE: Disabled */
 	&[disabled],
 	&.is-disabled {
+		color: var(--color-grey);
+		border-color: var(--color-grey);
 
 		&:focus,
 		&:active,
@@ -105,12 +107,14 @@
 		&:focus,
 		&:active,
 		&:hover {
-			background-color: var(--color-primary-70);
+			color: var(--color-primary-70);
 		}
 
 		/* CASE: Disabled */
 		&[disabled],
 		&.is-disabled {
+			color: var(--color-grey-light);
+			border-color: var(--color-grey-light);
 
 			&:focus,
 			&:active,
@@ -141,11 +145,12 @@
 	/* CASE: Disabled */
 	&[disabled],
 	&.is-disabled {
+		background-color: var(--color-grey);
 
 		&:focus,
 		&:active,
 		&:hover {
-			background-color: var(--color-secondary);
+			background-color: var(--color-grey);
 		}
 	}
 }
